# elide

./: CMakeLists.txt  CONTRIBUTING.md  README.md  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml  pre-commit-update.yml  vcpkg-release.yml
include/beman/elide/: CMakeLists.txt  deduce.hpp  elide.hpp
port/: portfile.cmake.in  vcpkg.json.in
src/beman/elide/: CMakeLists.txt
tests/beman/elide/: CMakeLists.txt  deduce.test.cpp  elide.test.cpp
